[tool.poetry]
name = "dryviz"
version = "0.1.0"
description = "Decorator-based library for dry-run visualization of Python code"
readme = "README.md"
license = "MIT"
authors = [ "Your Name <you@example.com>" ]

[tool.poetry.dependencies]
python = ">=3.7"
rich = ">=10.0.0"
wrapt = ">=1.12.0"

[tool.poetry.group.dev.dependencies]
prompt_toolkit = ">=3.0.0"
pytest = ">=6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"